--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,1 +1,8 @@
-<h1>Hello, World!</h1>
+{% extends "base.html" %}
+
+{% block extra_js %}
+{% endblock extra_js %}
+
+{% block content %}
+
+{% endblock content %}
