--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -12,6 +12,12 @@ html, body {
   color: #424242;
   font-family: 'Roboto', sans-serif;
 }
+section {
+  padding: 70px 0px;
+}
+section.grey {
+  background-color: #F7F7F7;
+}
 
 /* Navbar styles
 -------------------------------------------------- */
@@ -192,5 +198,135 @@ html, body {
   .search-button,
   .search-wrapper {
     display: block;
+  }
+}
+
+/* Homepage styles : Intro section
+-------------------------------------------------- */
+.intro-section {
+  color: #fff;
+  background-image: -webkit-linear-gradient(315deg, rgba(148, 0, 222, .8), rgba(0, 176, 235, .8)), url(../../theme/img/intro-section.jpeg);
+  background-image: linear-gradient(135deg, rgba(148, 0, 222, .8), rgba(0, 176, 235, .8)), url(../../theme/img/intro-section.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  text-align: center;
+  height: 100%;
+}
+
+/* TYPEWRITER */
+.typed-cursor {
+  opacity: 1;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite;
+}
+@keyframes blink {
+  0% { opacity:1; }
+  50% { opacity:0; }
+  100% { opacity:1; }
+}
+@-webkit-keyframes blink {
+  0% { opacity:1; }
+  50% { opacity:0; }
+  100% { opacity:1; }
+}
+@-moz-keyframes blink {
+  0% { opacity:1; }
+  50% { opacity:0; }
+  100% { opacity:1; }
+}
+
+/* TITLE */
+.head-text {
+  text-shadow: #000 0px 2px 4px;
+  padding: 0 20px;
+}
+.tagline {
+  font-size: 4em;
+  font-weight: 600;
+  -webkit-transition: all 0.7s ease-in-out;
+  transition: all 0.7s ease-in-out;
+}
+.sub-tagline {
+  opacity: 0;
+  font-size: 3em;
+  -webkit-transition: all 0.7s ease-in-out;
+  transition: all 0.7s ease-in-out;
+}
+.display-table {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+.display-table-cell {
+  display: table-cell;
+  vertical-align: middle;
+}
+@media (min-width: 320px) {
+  .tagline {
+    font-size: 3em;
+  }
+  .sub-tagline {
+    font-size: 2em;
+  }
+}
+@media (min-width: 768px) {
+  .tagline {
+    font-size: 4em;
+  }
+  .sub-tagline {
+    font-size: 3em;
+  }
+}
+
+/* PARTICLES */
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
+
+/* MOUSE SCROLL ICON */
+.nextSection {
+	position: absolute;
+  bottom: 35px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 50px;
+}
+.icon-scroll,
+.icon-scroll:before {
+  position: absolute;
+  left: 50%;
+}
+.icon-scroll {
+  width: 30px;
+  height: 55px;
+  margin-left: -20px;
+  top: 50%;
+  margin-top: -35px;
+  box-shadow: inset 0 0 0 1px #fff;
+  border-radius: 25px;
+}
+.icon-scroll:before {
+  content: '';
+  width: 8px;
+  height: 8px;
+  background: #fff;
+  margin-left: -4px;
+  top: 8px;
+  border-radius: 4px;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-name: scroll;
+}
+@keyframes scroll {
+  0% { opacity: 1; }
+  100% {
+    opacity: 0;
+    transform: translateY(46px);
   }
 }
