--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -36,4 +36,31 @@
     </a>
   </div>
 </section>
+
+<!-- About Section -->
+<section id="about" class="about-section grey">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="section-title">
+          <h2>Nice to meet you</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row welcome">
+      <div class="col-md-6 hidden-sm hidden-xs">
+        <div class="welcome-img">
+          <img src="theme/img/portrait.png" alt="portrait">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="welcome-text">
+          <blockquote cite="https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century">I make discoveries while swimming in data.</blockquote>
+          <p>Data Scientist and Machine Learning enthusiast. Enrolled in ML and Self-Driving Car NanoDegrees <a href="https://www.udacity.com/">@Udacity</a>. Thrilled about deep learning and self-driving cars.</p>
+          <p>Take a look at my <a href="#work" class="highlight smooth-scroll">work</a>, <a href="#blog" class="highlight smooth-scroll">read my blog</a>, or <a href="#contact" class="highlight smooth-scroll">get in touch</a>!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock content %}
