--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -7,6 +7,9 @@
 <!-- Typed.js -->
 <script src="{{SITEURL}}/theme/js/typed.min.js"></script>
 
+<!-- mixItUp.js -->
+<script src="{{SITEURL}}/theme/js/mixitup.min.js"></script>
+
 <!-- home.js -->
 <script src="{{SITEURL}}/theme/js/home.js"></script>
 {% endblock extra_js %}
@@ -58,6 +61,97 @@
           <blockquote cite="https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century">I make discoveries while swimming in data.</blockquote>
           <p>Data Scientist and Machine Learning enthusiast. Enrolled in ML and Self-Driving Car NanoDegrees <a href="https://www.udacity.com/">@Udacity</a>. Thrilled about deep learning and self-driving cars.</p>
           <p>Take a look at my <a href="#work" class="highlight smooth-scroll">work</a>, <a href="#blog" class="highlight smooth-scroll">read my blog</a>, or <a href="#contact" class="highlight smooth-scroll">get in touch</a>!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Work Section -->
+<section id="work" class="work-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="section-title">
+          <h2>Selected Work</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <ul class="work">
+        <li class="filter" data-filter="all">all</li>
+        <li class="filter" data-filter=".supervised-learning">Supervised Learning</li>
+        <li class="filter" data-filter=".unsupervised-learning">Unsupervised Learning</li>
+        <li class="filter" data-filter=".reinforcement-learning">Reinforcement Learning</li>
+      </ul>
+    </div>
+    <div class="work-inner">
+      <div class="row work-posts grid">
+        <div class="col-md-4 col-sm-6 mix supervised-learning" style="display: inline-block;">
+          <a href="#">
+            <figure>
+              <img src="theme/img/project-1.jpg" alt="">
+              <figcaption>
+                <h2>Finding Donors</h2>
+                <p>Supervised Learning</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 mix unsupervised-learning" style="display: inline-block;">
+          <a href="#">
+            <figure>
+              <img src="theme/img/project-2.jpg" alt="">
+              <figcaption>
+                <h2>Finding Donors</h2>
+                <p>Supervised Learning</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 mix reinforcement-learning" style="display: inline-block;">
+          <a href="#">
+            <figure>
+              <img src="theme/img/project-3.jpg" alt="">
+              <figcaption>
+                <h2>Finding Donors</h2>
+                <p>Supervised Learning</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 mix supervised-learning" style="display: inline-block;">
+          <a href="#">
+            <figure>
+              <img src="theme/img/project-4.jpg" alt="">
+              <figcaption>
+                <h2>Finding Donors</h2>
+                <p>Supervised Learning</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 mix unsupervised-learning" style="display: inline-block;">
+          <a href="#">
+            <figure>
+              <img src="theme/img/project-5.jpg" alt="">
+              <figcaption>
+                <h2>Finding Donors</h2>
+                <p>Supervised Learning</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 mix unsupervised-learning" style="display: inline-block;">
+          <a href="#">
+            <figure>
+              <img src="theme/img/project-6.jpg" alt="">
+              <figcaption>
+                <h2>Finding Donors</h2>
+                <p>Supervised Learning</p>
+              </figcaption>
+            </figure>
+          </a>
         </div>
       </div>
     </div>
