--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -157,4 +157,26 @@
     </div>
   </div>
 </section>
+
+<!-- Contact Section -->
+<section id="contact" class="contact-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="section-title">
+          <h2>Let's Talk!</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <form action="https://formspree.io/gregory@gdangelo.fr" method="POST">
+        <input class="field grey" type="text" name="name" placeholder="Your Name" maxlength="256" required>
+        <input class="field" type="email" name="_replyto" placeholder="Your Email" maxlength="256" required>
+        <input  class="field grey" type="text" name="_subject" placeholder="Is there anything in particular you want to talk about?" maxlength="256" required>
+        <textarea class="field" name="message" maxlength="5000" placeholder="Your kind words."></textarea>
+        <input class="button" type="submit" value="Send">
+      </form>
+    </div>
+  </div>
+</section>
 {% endblock content %}
