--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -131,9 +131,11 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-  
+
   <div class="main-content container">
     {% block content %}{% endblock %}
+
+    {% include 'footer.html' %}
   </div>
 
   <!-- Bootstrap core JS -->
