--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -53,7 +53,7 @@
     <div class="row welcome">
       <div class="col-md-6 hidden-sm hidden-xs">
         <div class="welcome-img">
-          <img src="theme/img/portrait.png" alt="portrait">
+          <img src="theme/img/project-1.jpg" alt="thumbnail">
         </div>
       </div>
       <div class="col-md-6">
@@ -155,6 +155,25 @@
         </div>
       </div>
     </div>
+  </div>
+</section>
+
+<!-- Blog Section -->
+<section id="blog" class="blog-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="section-title">
+          <h2>Blog<h2>
+        </div>
+      </div>
+    </div>
+    <div class="categories">
+      {% for category in categories %}
+        <a href="{{SITEURL}}/category/{{category[0].slug}}.html" class="category-link">{{category[0]}}</a>
+      {% endfor %}
+    </div>
+    <a href="{{SITEURL}}/blog" type="button" class="btn btn-lg">See All Articles</a>
   </div>
 </section>
 
