feat: Create contact page

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -53,7 +53,7 @@
     <div class="row welcome">
       <div class="col-md-6 hidden-sm hidden-xs">
         <div class="welcome-img">
-          <img src="theme/img/project-1.jpg" alt="thumbnail">
+          <img src="theme/img/portrait.png" alt="portrait">
         </div>
       </div>
       <div class="col-md-6">
