--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -651,3 +651,35 @@ figcaption p {
   margin-bottom: 0;
   font-size: 16px;
 }
+
+/* Contact page styles
+-------------------------------------------------- */
+section.header {
+  margin-top: 70px;
+  padding: 80px 10px;
+  background-color: #90e3fd;
+  background-image: -webkit-linear-gradient(315deg, rgba(145, 0, 217, .88), rgba(0, 182, 227, .82)), url(../../theme/img/header-section.jpeg);
+  background-image: linear-gradient(135deg, rgba(145, 0, 217, .88), rgba(0, 182, 227, .82)), url(../../theme/img/header-section.jpeg);
+  background-size: auto, cover;
+  color: hsla(0, 0%, 100%, .72);
+}
+section.header.red {
+  background-image: -webkit-linear-gradient(315deg, rgba(217, 0, 79, .88), rgba(227, 72, 0, .82)), url(../../theme/img/header-section.jpeg);
+  background-image: linear-gradient(135deg, rgba(217, 0, 79, .88), rgba(227, 72, 0, .82)), url(../../theme/img/header-section.jpeg);
+}
+section.header .main-heading {
+  color: #fff;
+  font-size: 48px;
+  font-weight: 300;
+}
+@media (min-width: 320px) {
+  section.header .main-heading {
+    text-align: center;
+  }
+}
+@media (min-width: 768px) {
+  section.header .main-heading {
+    text-align: left;
+    padding-left: 30px;
+  }
+}
