--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -859,3 +859,85 @@ section.category-link-content {
 .read-more:hover:after {
   background: #fff;
 }
+
+/* Search page styles
+-------------------------------------------------- */
+.search-content {
+  padding: 0;
+}
+.search-content .row {
+  margin: 0;
+}
+.search-content .search-filters h2 {
+  margin-top: 0;
+  font-size: .98em;
+}
+.search-content .search-filters,
+.search-content .search-results {
+  padding: 50px 30px 50px 30px;
+}
+.search-content .search-filters {
+  display: none;
+}
+@media only screen and (min-width: 768px) {
+  .search-content .search-filters {
+    display: block;
+  }
+}
+.search-filters .filter-category,
+.search-filters .filter-category {
+  margin-bottom: 20px;
+}
+.search-filters ul {
+  list-style: none;
+  padding: 0;
+}
+.search-filters li {
+  padding: 2px 8px 2px 8px;
+  font-size: .90em;
+}
+.search-filters li:hover a {
+  color: #000;
+}
+.search-filters li a {
+  text-decoration: none;
+  color: #888;
+}
+.search-results {
+  border-left: 1px solid #ddd;
+}
+.search-articles {
+  margin-top: 30px;
+  padding: 0;
+}
+.search-input-filter {
+  margin-left: 10px;
+}
+.search-input-filter input {
+  font-size: 1.3rem;
+  width: calc(100% - 10px);
+  padding: 20px 10px 15px 20px;
+  background: none;
+  border: none;
+  outline: 0;
+  box-shadow: none;
+  border-radius: 0;
+  color: #999;
+  border-bottom: 3px solid #ddd;
+}
+.search-input-filter .input-group-addon {
+  padding: 0;
+  font-size: 1.6rem;
+  color: #ddd;
+  background: none;
+  border-bottom: 3px solid #ddd;
+  border-top: none;
+  border-left: none;
+  border-radius: 0;
+}
+@media (min-width: 1200px) {
+  .search-articles .grid-sizer,
+  .search-articles .grid-item {
+    width: 33.3%;
+  }
+}
