--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -550,7 +550,7 @@ figcaption p {
   text-decoration: none;
   color: #000;
   background-color: #FFF;
-  width: calc(33.3% - 1rem);
+  width: calc(100% - 1rem);
   height: 90px;
   margin: 0.5rem;
   line-height: 90px;
@@ -558,6 +558,16 @@ figcaption p {
   border-radius: 4px;
   font-weight: bold;
   transition: transform 0.5s;
+}
+@media (min-width: 576px) {
+  .blog-section .categories .category-link {
+    width: calc(50% - 1rem);
+  }
+}
+@media (min-width: 768px) {
+  .blog-section .categories .category-link {
+    width: calc(33.3% - 1rem);
+  }
 }
 .blog-section .categories .category-link:hover {
   background: linear-gradient(0deg, #ffca2b, #fcd86c);
