--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -51,12 +51,7 @@
       </div>
     </div>
     <div class="row welcome">
-      <div class="col-md-6 hidden-sm hidden-xs">
-        <div class="welcome-img">
-          <img src="theme/img/portrait.png" alt="portrait">
-        </div>
-      </div>
-      <div class="col-md-6">
+      <div class="col-sm-12">
         <div class="welcome-text">
           <blockquote cite="https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century">I make discoveries while swimming in data.</blockquote>
           <p>Data Scientist and Machine Learning enthusiast. Enrolled in ML and Self-Driving Car NanoDegrees <a href="https://www.udacity.com/">@Udacity</a>. Thrilled about deep learning and self-driving cars.</p>
