--- a/theme/templates/about.html
+++ b/theme/templates/about.html
@@ -25,12 +25,18 @@
       </div>
     </div>
     <div class="row">
-      <!-- TO FILL -->
+      <img src="{{SITEURL}}/theme/img/avatar.jpg" class="avatar" /><br/><br/>
+      <p>
+        My recent driving experience with a self-driving car made me realize how important and powerful machine learning is for building autonomous vehicles. It motivated me to strengthen my technical skills and learn new technologies through the Machine Learning and Self-Driving Car Engineer Nanodegree programs at <a href="https://www.udacity.com/">@Udacity</a>.<br/><br/>
+        I am confident that my machine learning, teamwork and collaboration skills, as well as my passion for deep learning and autonomous vehicles will allow me to successfully pivote my career toward artificial intelligence and robotics.<br/><br/>
+        I am eager to design machine learning algorithms for self-driving cars to offer a better life and a safer world.
+      </p>
     </div>
   </div>
 </section>
 
 <section class="contact-me">
   <a href="{{SITEURL}}/contact" type="button" class="btn btn-lg">Contact Me</a>
+  <a href="{{SITEURL}}/assets/resume.pdf" type="button" class="btn btn-lg">Check my Resume</a>
 </section>
 {% endblock content %}
