--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -27,7 +27,7 @@
               Hi, I'm
               <span id="typed"></span>
             </h1>
-            <h3 class="sub-tagline">Data Scientist / Machine Learning Engineer</h3>
+            <h3 class="sub-tagline">Self-Driving Cars Engineer</h3>
           </div>
         </div>
       </div>
