feat: Add background image to about section

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -28,6 +28,18 @@ section.grey {
   text-transform: capitalize;
   font-size: 45px;
 }
+a[type="button"].btn-white-rounded {
+  margin-top: 50px;
+  border-radius: 4px;
+  border-color: #fff;
+  color: #fff;
+  background-color: transparent;
+  -webkit-transition: all 250ms ease;
+  transition: all 250ms ease;
+}
+a[type="button"].btn-white-rounded:hover {
+  border-color: #ffca2b;
+}
 
 /* Navbar styles
 -------------------------------------------------- */
@@ -343,48 +355,38 @@ section.grey {
 
 /* Homepage styles : About section
 -------------------------------------------------- */
+.about-section {
+  background-color: #F7F7F7;
+}
+@media (min-width: 768px) {
+  .about-section {
+    background-image: url(../../theme/img/greg_blurred_gray.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
+    clear: both;
+    color: #fff;
+  }
+}
 .about-section .section-title {
   margin-bottom: 30px;
 }
-.welcome-text blockquote {
-  border: none;
-  font-family: Georgia, serif;
-  font-style: italic;
+.welcome-text {
+  max-width: 70%;
+  margin: 0 auto;
   text-align: center;
-  font-size: 1.5em;
 }
-blockquote:before, blockquote:after {
-  position: relative;
-  top: 10px;
-  width: 60px;
-  height: 60px;
-  line-height: 1;
-  color: #7a7a7a;
-  font-size: 2em;
-}
-@media (min-width: 768px) {
-  .welcome-text blockquote {
-    font-size: 2em;
-  }
-  blockquote:before, blockquote:after {
-    top: 15px;
-  }
-}
-.welcome-text blockquote:before {
-  left: -10px;
-  content: "\201C";
-}
-.welcome-text blockquote:after {
-  right: 0;
-  content: "\201D";
+.welcome-text p {
+  text-align: justify;
+  font-size: 17px;
 }
 .highlight {
-  color: #000;
+  color: #fff;
   text-decoration: none;
   border-bottom: 2px solid #ffc932;
 }
 .highlight:hover {
-  color: #000;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -529,18 +531,6 @@ figcaption p {
   background-repeat: no-repeat;
   background-position: center center;
   text-align: center;
-}
-.blog-section a[type="button"] {
-  margin-top: 50px;
-  border-radius: 4px;
-  border-color: #fff;
-  color: #fff;
-  background-color: transparent;
-  -webkit-transition: all 250ms ease;
-  transition: all 250ms ease;
-}
-.blog-section a[type="button"]:hover {
-  border-color: #ffca2b;
 }
 .blog-section .categories {
   display: -webkit-box;
