--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -53,9 +53,11 @@
     <div class="row welcome">
       <div class="col-sm-12">
         <div class="welcome-text">
-          <blockquote cite="https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century">I make discoveries while swimming in data.</blockquote>
-          <p>Data Scientist and Machine Learning enthusiast. Enrolled in ML and Self-Driving Car NanoDegrees <a href="https://www.udacity.com/">@Udacity</a>. Thrilled about deep learning and self-driving cars.</p>
-          <p>Take a look at my <a href="#work" class="highlight smooth-scroll">work</a>, <a href="#blog" class="highlight smooth-scroll">read my blog</a>, or <a href="#contact" class="highlight smooth-scroll">get in touch</a>!</p>
+          <p>
+            I am a Computer Engineer with a Passion for Deep Learning and Self-Driving Cars. I am currently enrolled in the Machine Learning and Self-Driving Cars Nanodegree programs at Udacity.<br/><br/>
+            Take a look at my <a href="#work" class="highlight smooth-scroll">work</a>, <a href="#blog" class="highlight smooth-scroll">read my blog</a>, or <a href="#contact" class="highlight smooth-scroll">get in touch</a>!
+          </p>
+          <a href="{{SITEURL}}/about" type="button" class="btn btn-lg btn-white-rounded">Want to know more?</a>
         </div>
       </div>
     </div>
@@ -168,7 +170,7 @@
         <a href="{{SITEURL}}/category/{{category[0].slug}}.html" class="category-link">{{category[0]}}</a>
       {% endfor %}
     </div>
-    <a href="{{SITEURL}}/blog" type="button" class="btn btn-lg">See All Articles</a>
+    <a href="{{SITEURL}}/blog" type="button" class="btn btn-lg btn-white-rounded">See All Articles</a>
   </div>
 </section>
 
