--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -104,9 +104,12 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Project 1</a></li>
-              <li><a href="#">Project 2</a></li>
-              <li><a href="#">Project 3</a></li>
+              <li><a href="#">Vehicle Localization with a Particle Filter</a></li>
+              <li><a href="#">Object with Sensor Fusion-based Unscented Kalman Filter</a></li>
+              <li><a href="#">Vehicle Detection and Tracking</a></li>
+              <li><a href="#">Advanced Lane Finding</a></li>
+              <li><a href="#">Driving Behavior Cloning with CNN</a></li>
+              <li><a href="#">Traffic Sign Classification with CNN</a></li>
             </ul>
           </li>
           <li class="dropdown">
